samples/_failures_safe/1761223951_0b2590_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b55934f.c: In function ‘main’:
./samples/SAFE/__tmp_7b55934f.c:159:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  159 |     char choice
      |     ^~~~
./samples/SAFE/__tmp_7b55934f.c:159:5: error: expected declaration or statement at end of input
